--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --border-color: #144fc6;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -19,4 +23,16 @@ h1 {
 h3 {
     font-weight: 400;
     margin: 10px 0;
+}
+
+.cup {
+    background-color: #fff;
+    border: 4px solid var(--boder-color);
+    color: var(--border-color);
+    border-radius: 0 0 40px 40px;
+    height: 330px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
