--- a/style.css
+++ b/style.css
@@ -22,17 +22,32 @@ h1 {
 
 h3 {
     font-weight: 400;
-    margin: 10px 0;
+    margin: 10px 0px;
 }
 
 .cup {
     background-color: #fff;
-    border: 4px solid var(--boder-color);
+    border: 4px solid var(--border-color);
     color: var(--border-color);
     border-radius: 0 0 40px 40px;
     height: 330px;
     width: 150px;
+    margin: 30px 0px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+}
+
+.cup.cup-small {
+    height: 95px;
+    width: 50px;
+    border-radius: 0 0 15px 15px;
+    background-color: rgba(255, 255, 255, 0.9);
+    cursor: pointer;
+    font-size: 14px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 5px;
+    transition: 0.3s ease;
 }
