--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --border-color: #144fc6;
+    --fill-color: #6ab3f8;
 }
 
 * {
@@ -49,5 +50,28 @@ h3 {
     justify-content: center;
     text-align: center;
     margin: 5px;
+    transition: 0.3s ease;
+}
+
+.cup.cup-small.full {
+    background-color: var(--fill-color);
+    color: #fff;
+}
+
+.cups {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 280px;
+}
+
+.remained {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex: 1;
     transition: 0.3s ease;
 }
