class remained styling

--- a/style.css
+++ b/style.css
@@ -75,3 +75,12 @@ h3 {
     flex: 1;
     transition: 0.3s ease;
 }
+
+.remained span {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.remained small {
+    font-size: 12px;
+}
