class percentage and text styling

--- a/style.css
+++ b/style.css
@@ -84,3 +84,19 @@ h3 {
 .remained small {
     font-size: 12px;
 }
+
+.percentage {
+    background-color: var(--fill-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 30px;
+    height: 0;
+    transition: 0.3s ease;
+}
+
+.text {
+    text-align: center;
+    margin: 0 0 5px;
+}
